test-suite/parser/pass/let_binding.first
function f() -> Int {
  let x: Int = 10;
  return x;
}
