test-suite/parser/fail/invalid_keyword.first
function f() -> Int {
  wibble x = 10;
  return x;
}
